--- a/public/css/collections.less
+++ b/public/css/collections.less
@@ -125,7 +125,7 @@
             text-align: center;
             padding-top: @spacingWide;
 
-            .glyphicon {
+            .fas {
                 font-size: 64px;
             }
         }
@@ -224,7 +224,7 @@
             }
         }
 
-        .glyphicon-trash {
+        .fa-trash {
             cursor: pointer;
             margin-top: @spacingNormal;
         }
@@ -241,7 +241,7 @@
             padding: 0;
             margin-right: @spacingNormal;
 
-            .glyphicon {
+            .fas {
                 margin: 0 0 3px 3px;
             }
         }
