--- a/public/css/filters.less
+++ b/public/css/filters.less
@@ -30,13 +30,13 @@
             top: 12px;
         }
 
-        .glyphicon:not(.glyphicon-search) {
+        .far, .fas:not(.fa-search) {
             cursor: pointer;
         }
     }
 
     #complex-filter-trigger {
-        .glyphicon {
+        .fas {
             cursor: pointer;
             color: @linkColor;
             display: inline-block;
@@ -60,7 +60,7 @@
     .playlists {
         list-style-type: none;
         line-height: 2;
-        .glyphicon {
+        .fas {
             color: @greyLight;
             cursor: pointer;
         }
