--- a/public/css/structure.less
+++ b/public/css/structure.less
@@ -19,11 +19,11 @@ body > .loading {
         .dropdown-toggle {
             cursor: pointer;
         }
-        .dropdown-menu .glyphicon {
+        .dropdown-menu .fas {
             color: @grey;
             margin-right: @spacingNarrow;
         }
-        li.active > a > .glyphicon {
+        li.active > a > .fas {
             color: @white;
         }
     }
